traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code
var diag = 1;
var count:Int=1;
var x:Int=0;
override def run() {
  
  setPos(0,0);
  writeMessage(0)
  for(c<-1 to 6){
    diagonale(y);
    y=y+1;
  }
}
def diagonale(y){
  var x:Int=0
  while(y!=0){
    setPos(0,y);
    writeMessage(count);
    y=y-1;
    x=x+1;
    count=count+1;
    
  }
  
}